# defmt-embassy-usbserial

./: CHANGELOG.md  Cargo.toml  README.md
device-examples/: README.md
device-examples/esp32s2/src/: main.rs
device-examples/nrf52840/: Cargo.toml  README.md  memory.x
device-examples/nrf52840/.cargo/: config.toml
device-examples/nrf52840/src/: main.rs
device-examples/rp2040/.cargo/: config.toml
device-examples/rp2040/src/: main.rs
device-examples/rp235x/.cargo/: config.toml
device-examples/rp235x/src/: main.rs
src/: controller.rs  lib.rs  task.rs
