[package]
name = "defmtusb-nrf52840-helloworld"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.3", features = ["critical-section-single-core"] }
embassy-executor = { version = "0.9.1", features = ["defmt", "arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.9.0", features = ["defmt", "nrf52840", "time", "time-driver-rtc1"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
defmt = "1.0.1"
defmt-embassy-usbserial = { version = "0.2.1", default-features = false, features = ["buffersize-64"] }
panic-halt = "1.0.0"
embedded-hal-async = "1.0.0"

[profile.release]
opt-level = "s"
